# fastapi-vertical-slice-pycharm

./: .gitignore  LICENSE  Makefile.pycharm  README-PyCharm.md  docker-compose.full.yml  docker-compose.services.yml  env.pycharm.example  pyproject.toml  requirements-local.txt
docs/: database-guide.md  deployment-guide.md  pycharm-workflow.md  vertical-slice-architecture.md
scripts/: format-code.py  init-db.sql  setup-pycharm.py
src/: main.py
src/auth/: __init__.py  api.py
src/shared/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py
src/users/: __init__.py  api.py  schemas.py  service.py
